<resources>
    <string name="app_name">UniFinder</string>
    <string name="name_error">Please enter a Name</string>
    <string name="name">Name</string>
    <string name="userName_error">Please enter a User NAme</string>
    <string name="email_error">Please enter a email address</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="phone_error">Please enter a Phone Number</string>
    <string name="password_error">Please enter a password</string>
    <string name="Sing_in"> <u>Sign in </u></string>
    <string name="Resend"><u> Resend</u>.</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="title_activity_maps">Map</string>
    <string name="Select">Select Item</string>
    <string name="Select_cat">Select Category</string>


    <string name="nav_home">Home</string>
    <string name="nav_passenger">Passenger</string>
    <string name="nav_booking">Booking</string>
    <string name="nav_payment">Payment</string>
    <string name="add_Complains">Complains</string>

    <string name="loading">Loading</string>
    <string name="no">no</string>
    <string name="login">Login</string>
    <string name="phone_number">phone number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_account">Don\'t have Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cnic">CNIC</string>
    <string name="get_started">Get Started</string>
    <string name="select">Select drop Area</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>