<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
    android:id="@+id/navigation_home"
    android:icon="@drawable/home"
    android:iconTint="@color/colorPrimary"
    android:title="@string/nav_home" />

    <item
    android:iconTint="@color/colorPrimary"
    android:id="@+id/navigation_passengert"
    android:icon="@drawable/passenger"
    android:title="@string/nav_passenger" />

    <item
    android:iconTint="@color/colorPrimary"
    android:id="@+id/navigation_booking"
    android:icon="@drawable/booking"
    android:title="@string/nav_booking" />

    <item
    android:iconTint="@color/colorPrimary"
    android:id="@+id/navigation_payment"
    android:icon="@drawable/payment"
    android:title="@string/nav_payment" />

<!--    <item-->
<!--        android:id="@+id/tracking"-->
<!--        android:icon="@drawable/passenger"-->
<!--        android:iconTint="@color/colorPrimary"-->
<!--        android:title="Tracking" />-->

    <item
    android:iconTint="@color/colorPrimary"
    android:id="@+id/navigation_complains"
    android:icon="@drawable/complain"
    android:title="@string/add_Complains" />

</menu>